# g2-reto1-2020-01-mati-g2

./: Cargo.toml
benches/: my_benchmark.rs
database-matches.sled/: db  snap.00000000000693E3  snap.000000000013561D
database.sled/: db  snap.0000000000000071  snap.0000000000000101
src/: engine_bheap.rs  engine_btree.rs  lib.rs  main.rs  matches.rs  offers.rs  typed_tree.rs  utils.rs
src/engine/: engine_bheap.rs  engine_btree.rs  engine_keyedheap.rs  mod.rs  offer_ord.rs
