[package]
name = "matching-engine"
version = "0.1.0"
authors = ["jmanu <jm.castillo12@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.31.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.4"