[package]
name = "matching-engine"
version = "0.1.0"
authors = ["jmanu <jm.castillo12@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.31.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.4"
itchy = "0.2"
keyed_priority_queue = "0.1.2"
hdrhistogram = "7.0.0"
rand = "0.7.3"
rand_distr = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
